--- a/index.html
+++ b/index.html
@@ -351,71 +351,6 @@
         <section id="main-banner-names">
             <!--<div class="bg-image"></div>-->
 
-
-
-            <style>
-                .social {
-                    position: fixed;
-                    top: 200px;
-                    z-index: 99999999;
-                }
-
-                .social ul {
-                    padding: 0px;
-                    transform: translate(-270px, 0);
-
-                }
-
-                .social ul li {
-                    display: block;
-                    margin: 1px;
-                    background: #2993ce;
-                    width: 300px;
-                    text-align: right;
-                    padding: 5px;
-                    padding-top: 5px;
-                    /*border-radius: 0 30px 30px 0;*/
-                    transition: all 1s;
-
-                }
-
-                .social ul li:hover {
-                    transform: translate(90px, 0);
-                    background: white;
-
-                }
-
-                .social ul li:hover a {
-                    color: #000;
-                }
-
-                .social ul li:hover i {
-                    color: #fff;
-                    background: rgba(1, 1, 1, 0.36);
-                    transform: rotate(360deg);
-                    transition: all 1s;
-
-                }
-
-                .social ul li i {
-                    margin-left: 10px;
-                    text-align: center;
-                    color: #000;
-
-                    /*padding: 10px;
-  border-radius: 50%;*/
-                    width: 18px;
-                    /*height: 17px;*/
-                    font-size: 18px;
-                    background: #fff;
-                    transform: rotate(0deg);
-                    position: relative;
-
-                }
-            </style>
-            <link rel="stylesheet" href="../site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
-            <link href="../netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
             <div class="container-fluid max-w" style="padding:0;">
 
                 <div class="bnnr-hght">
@@ -444,6 +379,31 @@
                             <!--<img src="https://christuniversity.in/images/slider-right.png" class="slider-right img-responsive"/>-->
                         </div>
                     </div>
+                    <div class="col-sm-12 no-pad">
+                        <div class="bnnr-pp-txt-box">
+                            <div id="owl-demo-11">
+                                                        <div class="item">
+                                    <!--<h4>Welcome</h4>-->
+                                    <h1>39th Annual Conference of Ramanujan Mathematical Society</h1>
+                                                                <a href="#"  class="btn btn-default bnt-bttn"> Know More </a>
+                                                            </div>
+                                                        <div class="item">
+                                    <!--<h4>Welcome</h4>-->
+                                    <h1>27<sup>th</sup> - 29<sup>th</sup> December, 2024<br>Department of Sciences and Humanities</h1>
+                                                                <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Know More </a>
+                                                            </div>
+                                                            <div class="item">
+                                                                <!--<h4>Welcome</h4>-->
+                                                                <h1>CHRIST (Deemed to be University), Kengeri Campus</h1>
+                                                                                            <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Know More </a>
+                                                                                        </div>
+                                                    </div>
+                        
+                            
+                        </div>
+                                    </div>
+                           </div>
+                </div>
                 </div>
             </div>
     </div>
@@ -602,5 +562,7 @@
     </script>
     <script src="js/maxmegamenu.js"></script>
     <!--mega menu -->
+
+    <script src="js/owl.carousel.js"></script>
 </body>
 </html>
