--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <div id="owl-demo-11">
                                                         <div class="item">
                                     <!--<h4>Welcome</h4>-->
-                                    <h1>39th Annual Conference of Ramanujan Mathematical Society</h1>
+                                    <h1>39<sup>th</sup> Annual Conference of Ramanujan Mathematical Society</h1>
                                                                 <a href="#"  class="btn btn-default bnt-bttn"> Know More </a>
                                                             </div>
                                                         <div class="item">
