--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 
 
             <style>
+                #mega-menu-wrap-demo_navigation #mega-menu-demo_navigation li.mega-menu-item-has-children.mega-disable-link > a.mega-menu-link {
+                        font-size: 14.2px;
+                    }
                 @media only screen and (min-width: 1024px) {
                 .container {
                     width: 1390px;
@@ -389,17 +392,17 @@
                                                         <div class="item">
                                     <!--<h4>Welcome</h4>-->
                                     <h1>39<sup>th</sup> Annual Conference of Ramanujan Mathematical Society</h1>
-                                                                <a href="#"  class="btn btn-default bnt-bttn"> Know More </a>
+                                                                <a href="#"  class="btn btn-default bnt-bttn" style="width: fit-content;"> Download Brochure </a>
                                                             </div>
                                                         <div class="item">
                                     <!--<h4>Welcome</h4>-->
                                     <h1>27<sup>th</sup> - 29<sup>th</sup> December, 2024<br>Department of Sciences and Humanities</h1>
-                                                                <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Know More </a>
+                                                                <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Register Now </a>
                                                             </div>
                                                             <div class="item">
                                                                 <!--<h4>Welcome</h4>-->
                                                                 <h1>CHRIST (Deemed to be University), Kengeri Campus</h1>
-                                                                                            <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Know More </a>
+                                                                                            <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Browse Images </a>
                                                                                         </div>
                                                     </div>
                         
