--- a/venue.html
+++ b/venue.html
@@ -117,6 +117,12 @@
           <section id="updates"></section>
 
           <style>
+            #mega-menu-wrap-demo_navigation
+              #mega-menu-demo_navigation
+              li.mega-menu-item-has-children.mega-disable-link
+              > a.mega-menu-link {
+              font-size: 14.2px;
+            }
             @media only screen and (min-width: 1024px) {
               .container {
                 width: 1390px;
