--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                         <div class="col-lg-2 col-sm-3"> <a href="/"> <img src="images/logo.jpg"
                                     class="img-responsive main-logo" /></a> </div>
                         <div class="col-lg-8 col-sm-6 text-center">
-                            <h1 style="margin-top: 5px">RMS 2024</h1>
+                            <h1 style="margin-top: 5px; font-family: 'Times New Roman', Times, serif; color: #26327A;">RMS 2024</h1>
                   <br />
-                  <h4 style="margin-top: -18px">
-                    27<sup>th</sup> - 29<sup>th</sup> December, 2024
+                  <h4 style="margin-top: -18px; font-family: 'Times New Roman', Times, serif; color: #26327A;">
+                    December 27 - 29, 2024
                   </h4>
                         </div>
                         <div class="col-lg-2 col-sm-3"> <a href="https://www.ramanujanmathsociety.org/"> <img src="images/rmslogo2.png"
@@ -108,6 +108,7 @@
             <style>
                 #mega-menu-wrap-demo_navigation #mega-menu-demo_navigation li.mega-menu-item-has-children.mega-disable-link > a.mega-menu-link {
                         font-size: 14.2px;
+                        font-weight: 500;
                     }
                 @media only screen and (min-width: 1024px) {
                 .container {
@@ -164,7 +165,6 @@
                                                         <div class="col-sm-12">
                                                             <div class="menu-lists">
                                                                 <ul class="no-pad">
-
                                                                     <li><a href="overview.html">Overview</a></li>
                                                                 </ul>
                                                             </div>
@@ -397,12 +397,12 @@
                                                         <div class="item">
                                     <!--<h4>Welcome</h4>-->
                                     <h1>27<sup>th</sup> - 29<sup>th</sup> December, 2024<br>Department of Sciences and Humanities</h1>
-                                                                <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Register Now </a>
+                                                                <a href="registration.html" target="_blank" class="btn btn-default bnt-bttn" style="width: fit-content;"> Register Now </a>
                                                             </div>
                                                             <div class="item">
                                                                 <!--<h4>Welcome</h4>-->
                                                                 <h1>CHRIST (Deemed to be University), Kengeri Campus</h1>
-                                                                                            <a href="#" target="_blank" class="btn btn-default bnt-bttn"> Browse Images </a>
+                                                                                            <a href="#" target="_blank" class="btn btn-default bnt-bttn" style="width: fit-content;"> Browse Images </a>
                                                                                         </div>
                                                     </div>
                         
@@ -419,7 +419,20 @@
     <div class="clearfix"></div>
 
 
-
+    <section id="socil-medias">
+        <div class="container">
+            <ul class="no-pad">
+                <li> <a href="https://www.facebook.com/www.christuniversity.in/?modal=admin_todo_tour" target="_blank"> <img src="images/social-icons-1.png" class="img-responsive"/> </a> </li>
+                <li> <a href="https://twitter.com/christbangalore" target="_blank"> <img src="images/social-icons-2.png" class="img-responsive"/> </a> </li>
+                <li> <a href="http://christbangalore.blogspot.com/" target="_blank"> <img src="images/social-icons-3.png" class="img-responsive"/> </a> </li>
+                <li> <a href="https://www.youtube.com/thechristuniversity" target="_blank"> <img src="images/social-icons-4.png" class="img-responsive"/> </a> </li>
+                <li> <a href="https://play.google.com/store/apps/developer?id=Christ+University" target="_blank"> <img src="images/social-icons-5.png" class="img-responsive"/> </a> </li>
+                <li> <a href="https://www.flickr.com/photos/christuniversity/albums" target="_blank"> <img src="images/social-icons-6.png" class="img-responsive"/> </a> </li>
+      <li> <a href="https://www.instagram.com/christ_university_bangalore/" target="_blank"> <img src="images/social-icons-7.png" class="img-responsive"/> </a> </li>
+      <li> <a href="https://in.linkedin.com/school/christ-university-bangalore" target="_blank"> <img src="images/social-icons-8.png" class="img-responsive"/> </a> </li>
+            </ul>
+        </div>
+    </section>
 
 
     <section id="footr">
@@ -450,24 +463,14 @@
                             <p>Tel: +91 804012 9100 / 9600</p>
                         </div>
                     </div>
-                    <div class="clearfix"></div>
-
-
-                    <div class="addrs-itm">
-                        <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2">
-                            <i class="las la-fax footr-itmff"></i>
-                        </div>
-                        <div class="col-lg-10 col-xs-10 col-sm-10 col-md-10 no-pad">
-                            <p>Fax: 40129000</p>
-                        </div>
-                    </div>
+                    
                     <div class="clearfix"></div>
                     <div class="addrs-itm">
                         <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2">
                             <i class="las la-envelope footr-itmff"></i>
                         </div>
                         <div class="col-lg-10 col-xs-10 col-sm-10 col-md-10 no-pad">
-                            <p> Email: mail@christuniversity.in </p>
+                            <p> Email: rms24@conference.christuniversity.in </p>
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -524,9 +527,8 @@
             <div class="col-lg-2 col-sm-6 col-md-3">
                 <div class="footr-lnkds">
                     <ul>
-                        <li> <a href="#"> Plenary Speakers </a> </li>
-                        <li> <a href="#"> Symposia Speakers </a> </li>
-                        <li> <a href="#"> Contributory Talks </a> </li>
+                        <li> <a href="#"> Download Brochure </a> </li>
+                        <li> <a href="#"> Browse Images </a> </li>
                         <li> <a href="committee.html"> Organizing Committee </a> </li>
                         <li> <a href="contact.html"> Point of Contact </a> </li>
                     </ul>
