--- a/schedule.html
+++ b/schedule.html
@@ -97,10 +97,24 @@
                   /></a>
                 </div>
                 <div class="col-lg-8 col-sm-6 text-center">
-                  <h1 style="margin-top: 5px">RMS 2024</h1>
+                  <h1
+                    style="
+                      margin-top: 5px;
+                      font-family: 'Times New Roman', Times, serif;
+                      color: #26327a;
+                    "
+                  >
+                    RMS 2024
+                  </h1>
                   <br />
-                  <h4 style="margin-top: -18px">
-                    27<sup>th</sup> - 29<sup>th</sup> December, 2024
+                  <h4
+                    style="
+                      margin-top: -18px;
+                      font-family: 'Times New Roman', Times, serif;
+                      color: #26327a;
+                    "
+                  >
+                    December 27 - 29, 2024
                   </h4>
                 </div>
                 <div class="col-lg-2 col-sm-3">
@@ -122,6 +136,7 @@
               li.mega-menu-item-has-children.mega-disable-link
               > a.mega-menu-link {
               font-size: 14.2px;
+              font-weight: 500;
             }
             @media only screen and (min-width: 1024px) {
               .container {
@@ -456,23 +471,14 @@
                   <p>Tel: +91 804012 9100 / 9600</p>
                 </div>
               </div>
-              <div class="clearfix"></div>
 
-              <div class="addrs-itm">
-                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2">
-                  <i class="las la-fax footr-itmff"></i>
-                </div>
-                <div class="col-lg-10 col-xs-10 col-sm-10 col-md-10 no-pad">
-                  <p>Fax: 40129000</p>
-                </div>
-              </div>
               <div class="clearfix"></div>
               <div class="addrs-itm">
                 <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2">
                   <i class="las la-envelope footr-itmff"></i>
                 </div>
                 <div class="col-lg-10 col-xs-10 col-sm-10 col-md-10 no-pad">
-                  <p>Email: mail@christuniversity.in</p>
+                  <p>Email: rms24@conference.christuniversity.in</p>
                 </div>
               </div>
               <div class="clearfix"></div>
@@ -532,9 +538,8 @@
           <div class="col-lg-2 col-sm-6 col-md-3">
             <div class="footr-lnkds">
               <ul>
-                <li><a href="#"> Plenary Speakers </a></li>
-                <li><a href="#"> Symposia Speakers </a></li>
-                <li><a href="#"> Contributory Talks </a></li>
+                <li><a href="#"> Download Brochure </a></li>
+                <li><a href="#"> Browse Images </a></li>
                 <li><a href="committee.html"> Organizing Committee </a></li>
                 <li><a href="contact.html"> Point of Contact </a></li>
               </ul>
