--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
                             <!--image slider-->
                             <video playsinline="playsinline" autoplay muted="muted" loop class="vdo-bnr">
-                                <source src="uploads/banners/1239717620_2024-04-18_08-43-20.mp4" type="video/mp4">
+                                <source src="uploads/banners/reduced.mp4" type="video/mp4">
                             </video>
 
 
