Update video and font

--- a/accommodation-text.html
+++ b/accommodation-text.html
@@ -71,7 +71,7 @@
           justify-content: center;
         "
       >
-        <h1 class="p-0 mt-2 text-secondary">To be updated.</h1>
+        <h1 class="p-0 mt-2 serch-hd2">To be updated.</h1>
       </div>
     </div>
   </body>
