--- a/overview-text.html
+++ b/overview-text.html
@@ -8,6 +8,8 @@
       type="text/css"
       href="fontawesome6/css/all.min.css"
     />
+
+    <link href="css/common-styles.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="font/font.css" />
     <link
       rel="stylesheet"
@@ -16,6 +18,11 @@
     />
   </head>
   <style>
+    .abot-txt-innr {
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      font-size: medium;
+    }
     .text-secondary {
       color: #6c757d;
     }
@@ -45,7 +52,6 @@
     .h1 {
       margin-top: 0;
       margin-bottom: 0.5rem;
-      font-weight: 500;
       line-height: 1.2;
     }
     .card-body {
@@ -57,7 +63,6 @@
     }
     h5::first-letter {
       font-size: 2rem;
-      font-weight: bold;
     }
   </style>
   <body>
@@ -71,7 +76,7 @@
           justify-content: center;
         "
       >
-        <h5 class="p-0 mt-2 text-secondary">
+        <h5 class="p-0 mt-2 abot-txt-innr">
           The Ramanujan Mathematical Society (RMS) was founded in 1985 with the
           ostensible purpose of promoting mathematics at all levels. With this
           in view, the Society had been conducting major national and
@@ -86,7 +91,7 @@
           for the spread of mathematics at different levels.
         </h5>
 
-        <h5 class="p-0 mt-4 text-secondary">
+        <h5 class="p-0 mt-4 abot-txt-innr">
           The 39<sup>th</sup> Annual Conference of the Ramanujan Mathematical
           Society is hosted by the Department of Sciences and Humanities, School
           of Engineering & Technology, CHRIST (DEEMED TO BE UNIVERSITY), Kengeri
@@ -100,10 +105,8 @@
           talks, a Public Lecture, and group discussions by young researchers
           with experts in all areas of Pure and Applied Mathematics.
         </h5>
-        <h1 class="p-0 mt-2 text-secondary">
-          CHRIST (DEEMED TO BE UNIVERSITY)
-        </h1>
-        <h5 class="p-0 mt-2 text-secondary">
+        <h1 class="p-0 mt-2 serch-hd1">CHRIST (DEEMED TO BE UNIVERSITY)</h1>
+        <h5 class="p-0 mt-2 abot-txt-innr">
           CHRIST (DEEMED TO BE UNIVERSITY) was born out of the educational
           vision of St Kuriakose Elias Chavara, an educationist and social
           reformer of the nineteenth century in South India. He founded the
@@ -125,7 +128,7 @@
           subsequently in 2004, 2016, 2022 CHRIST (DEEMED TO BE UNIVERSITY) is
           currently accredited with ‘A+’ Grade.
         </h5>
-        <h5 class="p-0 mt-2 text-secondary">
+        <h5 class="p-0 mt-2 abot-txt-innr">
           The multi-disciplinary University which focuses on teaching, research
           and service offers Bachelor, Master and Doctoral programmes in
           humanities, social sciences, sciences, commerce, management,
@@ -138,10 +141,10 @@
           music and literary activities, all its campuses are a nurturing ground
           for creative excellence.
         </h5>
-        <h1 class="p-0 mt-2 text-secondary">
+        <h1 class="p-0 mt-2 serch-hd1">
           Department of Sciences and Humanities
         </h1>
-        <h5 class="p-0 mt-2 text-secondary">
+        <h5 class="p-0 mt-2 abot-txt-innr">
           Since its inception in 2010, the department of Sciences and Humanities
           aims at fostering curiosity for science among the engineering students
           of CHRIST (DEEMED TO BE UNIVERSITY) and help them to understand
@@ -151,7 +154,7 @@
           available for conducting experiments in Science as well as
           cutting-edge research.
         </h5>
-        <h5 class="p-0 mt-2 text-secondary">
+        <h5 class="p-0 mt-2 abot-txt-innr">
           The department has state of the art facility for guiding doctoral
           students to pursue their dream in completing the PhD in Physics,
           Chemistry, Mathematics, and English. Very updated and well planned
