--- a/schedule.html
+++ b/schedule.html
@@ -131,19 +131,17 @@
           <section id="updates"></section>
 
           <style>
-            #mega-menu-wrap-demo_navigation
-              #mega-menu-demo_navigation
-              li.mega-menu-item-has-children.mega-disable-link
-              > a.mega-menu-link {
-              font-size: 14.2px;
-              font-weight: 500;
-            }
             @media only screen and (min-width: 1024px) {
-              .container {
-                width: 1390px;
-              }
               .vdo-bnr {
                 width: 891px;
+              }
+            }
+          </style>
+
+          <style>
+            @media only screen and (min-width: 1024px) {
+              .min-mnu-brr {
+                margin-left: 340px;
               }
             }
           </style>
@@ -240,23 +238,6 @@
                             id="mega-menu-item-25293"
                           >
                             <a
-                              href="https://christuniversity.in/campus/Bangalore%20Kengeri%20Campus"
-                              target="_blank"
-                              class="mega-menu-link new-clss"
-                              tabindex="0"
-                              aria-haspopup="true"
-                              aria-expanded="false"
-                              role="button"
-                            >
-                              CHRIST (Deemed to be University)</a
-                            ><!--new-clss-active-->
-                          </li>
-
-                          <li
-                            class="mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-item-align-float-left mega-disable-link mega-menu-item-92996"
-                            id="mega-menu-item-25293"
-                          >
-                            <a
                               href="#"
                               class="mega-menu-link new-clss"
                               tabindex="0"
@@ -289,7 +270,13 @@
                                           >Registration</a
                                         >
                                       </li>
-                                      <li><a href="#">FAQs</a></li>
+                                      <li>
+                                        <a
+                                          href="uploads/FAQ.pdf"
+                                          target="_blank"
+                                          >FAQs</a
+                                        >
+                                      </li>
                                     </ul>
                                   </div>
                                 </div>
@@ -370,23 +357,6 @@
                             id="mega-menu-item-25293"
                           >
                             <a
-                              href="https://www.ramanujanmathsociety.org/"
-                              target="_blank"
-                              class="mega-menu-link new-clss"
-                              tabindex="0"
-                              aria-haspopup="true"
-                              aria-expanded="false"
-                              role="button"
-                            >
-                              Ramanujan Mathematical Society</a
-                            ><!--new-clss-active-->
-                          </li>
-
-                          <li
-                            class="mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-item-align-float-left mega-disable-link mega-menu-item-92996"
-                            id="mega-menu-item-25293"
-                          >
-                            <a
                               href="#"
                               class="mega-menu-link new-clss"
                               tabindex="0"
@@ -396,7 +366,7 @@
                             >
                               Contacts<span class="mega-indicator"></span></a
                             ><!--new-clss-active-->
-                            <ul class="mega-sub-menu" style="width: 207px">
+                            <ul class="mega-sub-menu" style="width: 220px">
                               <li
                                 class="mega-menu-row mega-singlecolumnmobile"
                                 id="mega-menu-25293-0"
@@ -411,9 +381,7 @@
                                       </li>
 
                                       <li>
-                                        <a href="contact.html"
-                                          >Point of Contact</a
-                                        >
+                                        <a href="contact.html">Contact</a>
                                       </li>
                                     </ul>
                                   </div>
@@ -519,7 +487,7 @@
                   </a>
                 </li>
                 <li><a href="registration.html"> Registration </a></li>
-                <li><a href="#" target="_blank"> FAQs </a></li>
+                <li><a href="uploads/FAQ.pdf" target="_blank"> FAQs </a></li>
               </ul>
             </div>
           </div>
@@ -541,7 +509,7 @@
                 <li><a href="#"> Download Brochure </a></li>
                 <li><a href="#"> Browse Images </a></li>
                 <li><a href="committee.html"> Organizing Committee </a></li>
-                <li><a href="contact.html"> Point of Contact </a></li>
+                <li><a href="contact.html"> Contact </a></li>
               </ul>
             </div>
           </div>
