--- a/venue-text.html
+++ b/venue-text.html
@@ -16,6 +16,10 @@
     />
   </head>
   <style>
+    .abot-txt-innr {
+      font-weight: 400;
+      font-size: medium;
+    }
     .text-secondary {
       color: #6c757d;
     }
@@ -45,7 +49,6 @@
     .h1 {
       margin-top: 0;
       margin-bottom: 0.5rem;
-      font-weight: 500;
       line-height: 1.2;
     }
     .card-body {
@@ -57,7 +60,6 @@
     }
     h5::first-letter {
       font-size: 2rem;
-      font-weight: bold;
     }
   </style>
   <body>
@@ -71,10 +73,10 @@
           justify-content: center;
         "
       >
-        <h1 class="p-0 mt-2 text-secondary">
+        <h1 class="p-0 mt-2 serch-hd1">
           Welcome to CHRIST (DEEMED TO BE UNIVERSITY) Kengeri Campus
         </h1>
-        <h5 class="p-0 mt-2 text-secondary">
+        <h5 class="p-0 mt-2 abot-txt-innr">
           The event will be held on the sprawling campus of CHRIST (DEEMED TO BE
           UNIVERSITY). It nears the epitome of the serene environment that is
           required for a well-balanced educational and academic life. Spread
@@ -83,7 +85,7 @@
           awarded the Special Outstanding Prize of 'Best Ornamental Gardens' to
           Kengeri Campus for five years consecutively starting from 2014.
         </h5>
-        <h5 class="p-0 mt-2 text-secondary">
+        <h5 class="p-0 mt-2 abot-txt-innr">
           As of now, no travel support can be committed to the participants from
           the organizers due to lack of fund. Even the local travel from Airport
           or Railway Station to the place of accommodation has to be arranged
@@ -98,7 +100,7 @@
             <li class="mb-4 fs-5">
               <i class="bi bi-cursor-fill" style="color: rgb(175, 160, 26)"></i>
               <a
-                class="text-secondary"
+                class="abot-txt-innr"
                 href="https://christuniversity.in/how-to-reach-christ-bannerghatta-road-campus"
                 >How to reach CHRIST (DEEMED TO BE UNIVERSITY) KENGERI CAMPUS</a
               >
