--- a/registration-text.html
+++ b/registration-text.html
@@ -16,6 +16,10 @@
     />
   </head>
   <style>
+    .abot-txt-innr {
+      font-weight: 400;
+      font-size: medium;
+    }
     .text-secondary {
       color: #6c757d;
     }
@@ -45,7 +49,6 @@
     .h1 {
       margin-top: 0;
       margin-bottom: 0.5rem;
-      font-weight: 500;
       line-height: 1.2;
     }
     .card-body {
@@ -57,13 +60,12 @@
     }
     h5::first-letter {
       font-size: 2rem;
-      font-weight: bold;
     }
   </style>
   <body>
     <div class="card scheduleCard m-0 p-0">
       <div class="card-body m-0">
-        <h5 class="p-2 text-secondary">
+        <h5 class="p-2 abot-txt-innr">
           <p>
             Interested Faculty members and Researchers from any institution of
             India are encouraged to participate in the conference. All
@@ -102,7 +104,7 @@
           <br />
           <div class="mx-2 h5">
             <div class="table-responsive mb-4">
-              <table class="table table-bordered align-middle text-secondary">
+              <table class="table table-bordered align-middle abot-txt-innr">
                 <thead>
                   <tr>
                     <td colspan="3" class="text-center fw-bold">
@@ -157,7 +159,7 @@
 
         <div class="mx-2 h5">
           <div class="table-responsive mb-4">
-            <table class="table table-bordered align-middle text-secondary">
+            <table class="table table-bordered align-middle abot-txt-innr">
               <thead>
                 <tr>
                   <td colspan="3" class="text-center fw-bold">
@@ -217,7 +219,7 @@
               Payment Link</a
             ></strong
           ><br /><br />
-          <p class="text-secondary">
+          <p class="abot-txt-innr">
             Campus accommodation may be provided to accompanying family members,
             primarily for spouse and children (up to 12 years). For each
             accompanying person, there is an
@@ -227,12 +229,12 @@
             Please note that only a double room will be provided. More than one
             room cannot be provided.
           </p>
-          <p class="text-secondary">
+          <p class="abot-txt-innr">
             <strong>Note 1 -</strong> There is <span>&#8377;</span> 500/
             discount in registration fees for Members of Ramanujan Mathematical
             Society.
           </p>
-          <p class="text-secondary">
+          <p class="abot-txt-innr">
             <strong>Note 2 -</strong> Registration fee does not include local
             travel. As of now, no travel support can be committed to the
             participants from the organizers due to lack of fund. See the Travel
