--- a/contact.html
+++ b/contact.html
@@ -413,7 +413,7 @@
                 </div>
                 <div class="col-lg-10 col-xs-10 col-sm-10 col-md-10 no-pad">
                   <p>
-                    Dharmaram College Post, Hosur Road, Bengaluru - 560029,<br />
+                    Kanmanike, Kumbalgodu, Mysore Road, Bangalore - 560074,<br />
                     Karnataka, India
                   </p>
                 </div>
@@ -424,7 +424,7 @@
                   <i class="las la-phone footr-itmff"></i>
                 </div>
                 <div class="col-lg-10 col-xs-10 col-sm-10 col-md-10 no-pad">
-                  <p>Tel: +91 804012 9100 / 9600</p>
+                  <p>Tel: +91 98450 78784</p>
                 </div>
               </div>
 
